cmake_minimum_required(VERSION 2.8)
project( 2Dto3D )
find_package( OpenCV REQUIRED )
add_executable( stereo_disparity src/stereo_disparity.cpp )
add_executable( 3D_reconstruction src/3D_reconstruction.cpp )
target_link_libraries( stereo_disparity ${OpenCV_LIBS} )
target_link_libraries( 3D_reconstruction ${OpenCV_LIBS} )
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)